<resources>

    <string name="app_name">MyTradingApp</string>
    <string name="content_description_end_icon">Login</string>
    <string name="SignIn">Sign In</string>
    <string name="ThemeColor">Theme Color</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Welcome">Welcome</string>
    <string name="SignInToContinue">Sign In To Continue</string>

    <string name="NewUser">New User?</string>
    <string name="SignUp">Signup</string>

    <string name="CreateUser">Create User</string>
    <string name="CreateUserToContinue">Create User To Continue</string>

    <string name="Create">Create</string>
    <string name="Back">Back</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="help_category">help_category</string>

    <string name="search_hint">Enter tickerName</string>



</resources>